Chris - DevOrg/src/objects/AM_Asset__c.object
<CustomObject>
    <fields>
        <fullName>AM_Available_From__c</fullName>
        <label>Available From</label>
        <summarizedField>AM_Asset_Allocation__c.AM_End_Date__c</summarizedField>
        <summaryForeignKey>AM_Asset_Allocation__c.AM_Asset__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>AM_Available_for_allocation__c</fullName>
        <formula>OR( ISNULL( AM_Available_From__c ) , 
    AND(NOT ISNULL( AM_Available_From__c ),
        NOW() &gt; AM_Available_From__c ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Available for allocation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AM_Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AM_ID__c</fullName>
        <description>External ID for the asset</description>
        <externalId>true</externalId>
        <label>ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AM_Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Location</label>
        <referenceTo>AM_Location__c</referenceTo>
        <relationshipName>Assets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AM_Out_of_Service__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Out of Service</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AM_Price__c</fullName>
        <label>Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AM_Status__c</fullName>
        <description>Describes the status of an asset</description>
        <formula>IF( AM_Available_for_allocation__c , &quot;Available&quot;, &quot;Assigned&quot;)</formula>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AM_Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Type A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Type B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Type C</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>AM_Asset</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>AM_Location__c</columns>
        <columns>AM_Price__c</columns>
        <columns>AM_Comments__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>AM_Out_of_Service__c</columns>
        <columns>AM_Status__c</columns>
        <columns>AM_Available_for_allocation__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>A-{00000000}</displayFormat>
        <label>Asset Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Assets</pluralLabel>
    <recordTypes>
        <fullName>Apartment</fullName>
        <active>true</active>
        <description>Record Type for Apartments</description>
        <label>Apartment</label>
    </recordTypes>
    <recordTypes>
        <fullName>Device</fullName>
        <active>true</active>
        <description>Record Type for a device</description>
        <label>Device</label>
    </recordTypes>
    <recordTypes>
        <fullName>Locker</fullName>
        <active>true</active>
        <label>Locker</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>